primitives/api/test/tests/ui/impl_missing_version.stderr
error[E0433]: failed to resolve: could not find `ApiV4` in `runtime_decl_for_Api`
  --> tests/ui/impl_missing_version.rs:21:13
   |
21 |     impl self::Api<Block> for Runtime {
   |                ^^^ could not find `ApiV4` in `runtime_decl_for_Api`

error[E0405]: cannot find trait `ApiV4` in module `self::runtime_decl_for_Api`
  --> tests/ui/impl_missing_version.rs:21:13
   |
11 |     pub trait Api {
   |     ------------- similarly named trait `ApiV2` defined here
...
21 |     impl self::Api<Block> for Runtime {
   |                ^^^ help: a trait with a similar name exists: `ApiV2`
